Fix scrolling bug on iOS

--- a/src/less/slidebars.less
+++ b/src/less/slidebars.less
@@ -1,6 +1,9 @@
 .sb-slidebar, .sb-slidebar * {
 	-webkit-transform: initial; /*fix a bug on tabs z-index*/
 }
+#sb-site, .sb-site-container {
+	min-height: 0;
+}
 
 @media (max-width: 480px) {
 	/* Slidebar widths on extra small screens. */
